test/parser/Queries/syntax_errors/fail_K-ForExprWithout-35.xq
(:***foo*foo**foo*** for ****************************** let ** where ******** where ***:)
(: Test: K-ForExprWithout-35  for    $  eq    where    for           $   let   ne           $   eq  :) where (: Written for  by: Frans Englich  eq      for        ne     let  ne    where   ne    where    for         :)
( let : Date: 2006-10-05T18:29:37+02:00 for     where      ne              where   eq  :)
(:  let Purpose: Variable which is not in  $ scope.           $   eq   :) let 
(:*** for ************** let **************** let * where *****************:)
for $foo in 1 return $NOTEXIST